WIP: sections aligned and positioned elements correctly

--- a/style.css
+++ b/style.css
@@ -11,10 +11,20 @@ body {
   flex-direction: column;
 }
 
-section {
-  min-height: 50vh;
+.mb-15 {
+  margin-bottom: 15px;
+}
+
+section.conference {
+  min-height: 70vh;
+  position: relative;
+}
+
+section.game {
+  min-height: 30vh;
   margin-left: 20px;
   margin-right: 20px;
+  padding: 15px;
   position: relative;
 }
 
@@ -31,6 +41,16 @@ section {
   border-radius: 50px;
   padding: 15px;
   color: #fff;
+  cursor: pointer;
+}
+
+.pill:hover::before {
+  color: black !important;
+}
+
+.pill:hover {
+  background: #f28f04;
+  color: black;
 }
 
 .pill.a::before {
